--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,18 @@
 - layout: left
+  company: Lifestream ( Big Sofa Technologies previously)
+  link: bigsofatech.com
+  job_title: BackEnd Developer
+  dates: October 2021 - Present
+  description: | # this will include new lines to allow paragraphs
+    As a BackEnd Developer I contribute to development of high quality technology by maintaining and improving microservice architecture systems. Technologies I use include: Ruby on Rails, JavaScript, Relational (MySQL, PostgreSQL), NonRelational (MongoDB, DynamoDB), Graph Database (Neo4j), which brings the familarity of the SQL and Cypher query languages, Sidekiq, Redis, Apache Kafka, Elasticsearch, AWS services, Docker.
+
+- layout: left
   company: Big Sofa Technologies
   link: bigsofatech.com
   job_title: Developer In Test
   dates: May 2019 - Present
   description: | # this will include new lines to allow paragraphs
-    As a Developer in Test. I'm working in ROTA. I spend one week on developing new features and fixing bugs and the other week on building automated end to end tests to ensure a high standard of our services. In both roles, I use a methodological approach. When I joined Big Sofa Technologies I’ve introduced tech and product teams to a ShapeUp (invented by Basecamp creators) which is followed by the product development team and a risk analysis chart based on which test planning takes place. Technology Stack, I use daily includes Ruby/Ruby on Rails, RSpec, MySQL, AWS, CircleCi , ElasticSearch, Docker, Neo4j, NodeJS/Testcafe .
+    As a Developer in Test I worked in ROTA. I spent one week on developing new features and fixing bugs and the other week on building automated end to end tests to ensure a high standard of our services. In both roles, I use a methodological approach. When I joined Big Sofa Technologies I’ve introduced tech and product teams to a ShapeUp (invented by Basecamp creators) which is followed by the product development team and a risk analysis chart based on which test planning takes place. Technology Stack, I use daily, includes Ruby/Ruby on Rails, RSpec, MySQL, AWS, CircleCi , ElasticSearch, Docker, Neo4j, NodeJS/Testcafe .
 
 - layout: left
   company: Amigo Partnership
