--- a/_config.yml
+++ b/_config.yml
@@ -2,55 +2,106 @@
 repository: ewelinasobora/ewelina_sobora_cv
 favicon: images/favicon.ico
 
+# Content configuration version
+version: 2
+
 # Personal info
 name: Ewelina Sobora
 title: Ruby/Ruby on Rails Developer
 email: e@e-dot.uk
 
+# Dark Mode (true/false/never)
+darkmode: true
+
 # Social links
-twitter_username: exwxexl
-github_username:  ewelinasobora
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-
 linkedin_username: ewelina-sobora
-# pinterest_username: jekyll
-# googleplus_username: +jekyll
+github_username:  ewelinasobora
+twitter_username: exwxexl
 
-# About Section
-# about_title: About Me
+
 about_profile_image: images/profile.jpeg
-about_content: | # this will include new lines to allow paragraphs
+about_content: | 
   Hi, my name is Ewelina and I specialize in Ruby and Ruby on Rails Development. My interest in logic and the process of bringing innovative ideas to fruition has been a lifelong passion. This journey began during my undergraduate studies, where I pursued a BSc in Mathematics and Economics, along with International Relations in my hometown in Poland. It was here that I was first introduced to the world of coding, and I was immediately drawn to its expressive and creative potential. After completing my degree, I embarked on a career as a Sales Representative in Cracow, gaining valuable insights into the business world. However, my passion for technology continued to grow and I made the bold decision to pursue my ambitions in London. Dedicated to the pursuit of continuous learning and skills development, I am committed to evolving my expertise in this field.
-# Section
 content:
-  - title: Certificates # Title for the section
+  - title: Experience
     layout: list
     content:
-      - layout: top-middle
-        title: AWS Certified Cloud Practitioner
-        link: https://www.credly.com/badges/08a764b5-f81b-4b7e-9849-828e0498fdcc?source=linked_in_profile
-# Experience Section
-# experience_title: Experience
+    - layout: left
+      title: Lifestream ( Big Sofa Technologies previously)
+      sub_title: BackEnd Developer
+      caption: October 2021 - September 2022
+      link: lifestreamhx.com
+      description: | 
+        In my capacity as a BackEnd Developer, I have made significant contributions towards the development of cutting-edge technology. My primary responsibilities have included maintaining and improving microservice architecture systems, thereby ensuring that the final product is of the highest possible quality. To achieve this, I have harnessed a range of advanced technologies, including Ruby on Rails, JavaScript, Relational (MySQL, PostgreSQL), Non-Relational (MongoDB, DynamoDB), Graph Database (Neo4j)  as well as Sidekiq, Redis, Apache Kafka, Elasticsearch, other AWS services and Docker. By leveraging these tools and technologies, I have been able to deliver efficient, scalable and reliable systems that meet the needs of our clients.
 
-# Education Section
-# educaton_title: Education
+    - layout: left
+      title: Big Sofa Technologies
+      link: bigsofatech.com
+      sub_title: Developer In Test
+      caption: May 2019 - October 2021
+      description: | 
+        As a Developer in Test, I was responsible for developing new features, fixing bugs, and building automated end-to-end tests of the core functionalities of the platform from the ground up that ensured our services met the highest standards. Throughout my tenure, I adopted a meticulous and systematic approach to all my tasks, which helped me achieve remarkable results. Upon joining Big Sofa Technologies, I took the initiative to introduce the tech and product teams to ShapeUp - an innovative product development approach invented by Basecamp creators. Additionally, I introduced a risk analysis chart, which played a crucial role in facilitating test planning. To accomplish these tasks, I leveraged a diverse technology stack, which included Ruby/Ruby on Rails, RSpec, MySQL, AWS, CircleCI, ElasticSearch, Docker, Neo4j, and NodeJS/Testcafe. Through my proficiency in these tools, I was able to build efficient and scalable systems that were essential in achieving our organizational goals.
 
+    - layout: left
+      title: Amigo Partnership
+      link: amigopartnership.com
+      sub_title: BackEnd Developer
+      caption: August 2017 - October 2018
+      description: | 
+        My primary roles involved the development of a bespoke a platform enabling the integrated delivery of a suite of apps to produce an API utilised by a CMS to manage front-end applications. Working in a team to build REST and GraphQL API applications and testing with TDD RSpec for a range of companies, including Rolls Royce and O2 . Projects supported many features of OS. I specialised in Rails 5 , REST and GraphQL API , RSpec, JWT, PostgreSQL, Heroku, AWS and Docker .
+
+    - layout: left
+      title: Storage Made Easy
+      link: eu.storagemadeeasy.com
+      sub_title: QA Software Engineer
+      caption: July 2015 - February 2017
+      description: | 
+        As a QA Engineer, I demonstrated expertise in testing both Web and Mobile-based Applications, with a deep understanding of all stages of the software development and testing life cycle. My daily responsibilities included testing various versions of the SME Appliance prepared for iOS, Windows, Mac, and Linux, ensuring that all features and functionalities met the highest quality standards. In addition, I was responsible for implementing and updating the Agile Test Strategy, which involved collaborating closely with the development team and other stakeholders to ensure that testing was integrated seamlessly into the software development process. Through my expertise and meticulous attention to detail, I was able to create a robust and efficient testing process that ensured the highest levels of quality and performance for our applications.
+
+  - title: Certifications
+    layout: list
+    content:
+    - layout: top-middle
+      title: AWS Certified Cloud Practitioner
+      link_text: click here to verify AWS Certified Cloud Practitioner Badge
+      link: https://www.credly.com/badges/08a764b5-f81b-4b7e-9849-828e0498fdcc?source=linked_in_profile
+
+  - title: Skills
+    layout: list
+    content:
+    - layout: top-middle
+      description: Ruby, Ruby on Rails, Sidekiq / Redis, Elasticsearch, RSpec (TDD), TestCafe, Cypress, Cucumber (BDD), PostgreSQL, MySQL (RDBS), AWS, Docker, Ansible playbooks, Heroku, Dokku, Kibana, Grafana, Apache Kafka
+
+  - title: Education
+    layout: list
+    content:
+    - layout: top-middle
+      title: The State School Of Higher Education In Chelm (Poland)
+      caption: 2011 - 2014
+      sub_title: BSc Mathematics and Economy
+
+    - layout: top-middle
+      title: The State School Of Higher Education In Chelm (Poland)
+      sub_title: Bsc International Relations - Spec.The international Dimension of administration and self-government.
+      caption: 2010 - 2013
+   
+  - title: A Little More About Me
+    layout: text
+    content: | 
+      In my leisure time, I enjoy engaging in various activities such as playing video games on the PS5, exploring new recipes and cooking a variety of cuisines, cultivating and preparing homemade kimchi, nurturing my garden, cycling, and attending concerts. These hobbies allow me to unwind and rejuvenate my mind after dedicating my time and effort to professional pursuits.
 # Footer
 footer_show_references: true
 
-# Build settings
-remote_theme: sproogen/resume-theme
+remote_theme: sproogen/modern-resume-theme
 
 sass:
   sass_dir: _sass
   style: compressed
 
-darkmode: true
-
 plugins:
  - jekyll-seo-tag
 
-
-exclude : ["Gemfile"]
+exclude : [
+  "Gemfile",
+  "Gemfile.lock"
+  ]
