--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Ewelina Sobora
-title: Ruby/Ruby on Rails Developer
+title: Software Engineer
 email: e@e-dot.uk
 
 # Dark Mode (true/false/never)
@@ -21,7 +21,7 @@ twitter_username: exwxexl
 
 about_profile_image: images/profile.jpeg
 about_content: |
-  Hi, my name is Ewelina and I specialize in Ruby and Ruby on Rails Development. My interest in logic and the process of bringing innovative ideas to fruition has been a lifelong passion. This journey began during my undergraduate studies, where I pursued a BSc in Mathematics and Economics, along with International Relations in my hometown in Poland. It was here that I was first introduced to the world of coding, and I was immediately drawn to its expressive and creative potential. After completing my degree, I embarked on a career as a Sales Representative in Cracow, gaining valuable insights into the business world. However, my passion for technology continued to grow and I made the bold decision to pursue my ambitions in London. Dedicated to the pursuit of continuous learning and skills development, I am committed to evolving my expertise in this field.
+  Hi, my name is Ewelina and I specialize in software engineering. My interest in logic and the process of bringing innovative ideas to fruition has been a lifelong passion. This journey began during my undergraduate studies, where I pursued a BSc in Mathematics and Economics, along with International Relations in my hometown in Poland. It was here that I was first introduced to the world of coding, and I was immediately drawn to its expressive and creative potential. After completing my degree, I embarked on a career as a Sales Representative in Cracow, gaining valuable insights into the business world. However, my passion for technology continued to grow and I made the bold decision to pursue my ambitions in London. Dedicated to the pursuit of continuous learning and skills development, I am committed to evolving my expertise in this field.
 content:
   - title: Experience
     layout: list
